# EdgeDeviceManage_Master

./: CMakeLists.txt  README.md
include/: file.hpp  interact_status.hpp  interface.hpp  kbhit.hpp  master.hpp  msg.hpp  msg_type.hpp  semaphore.hpp  slave.hpp  task.hpp  taskSchedule.hpp  visualInterface.hpp
include/taskSchedule/: genDAG.h  genTest.h  globalVar.h  heft.h  randInfo.h  readFileAndConfig.h  writeToFile.h
src/: base64.cpp  cmdInterface.cpp  file.cpp  interface.cpp  kbhit.cpp  main.cpp  msg.cpp  task.cpp  taskSchedule.cpp  testDAG.cpp  visualInterface.cpp
src/taskSchedule/: genDAG.cpp  genTest.cpp  globalVar.cpp  readFileAndConfig.cpp  writeToFile.cpp
task/: 1  1.cpp  1_1  1_1.c  1_10  1_10.c  1_100  1_100.c  1_11  1_11.c  1_12  1_12.c  1_13  1_13.c  1_14  1_14.c  1_15  1_15.c  1_16  1_16.c  1_17  1_17.c  1_18  1_18.c  1_19  1_19.c  1_1_log.txt  1_2  1_2.c  1_20  1_20.c  1_21  1_21.c  1_22  1_22.c  1_23  1_23.c  1_24  1_24.c  1_25  (+189 more)
